# AAM-CV-FSAE

./: README.md  count_class.py  remove_class.py
yolov10_cone_detection/: CMakeLists.txt  package.xml
yolov10_cone_detection/launch/: yolo_cone_detection.launch
yolov10_cone_detection/src/: test.py  yolo_cone_detection_node.py
